[package]
name = "Ubik"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-session = "0.5"
bcrypt = "0.13"
sqlx = { version = "0.6", features = [ "postgres", "runtime-tokio-native-tls", "macros" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
dotenv = "0.15" # For environment variable management
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
validator = "0.16"
validator_derive = "0.16"
thiserror = "1.0"